[gd_scene load_steps=9 format=3 uid="uid://djqacw65swdqc"]

[ext_resource type="Script" path="res://demo.gd" id="1_76ghk"]
[ext_resource type="PackedScene" uid="uid://dgm10m7u26drx" path="res://addons/libmaszyna/developer_console.tscn" id="2_fdv2n"]
[ext_resource type="PackedScene" uid="uid://c5hi8nsm1d2hb" path="res://sm_42v_1.tscn" id="2_t8uqe"]
[ext_resource type="PackedScene" uid="uid://1v37c7y4cwcx" path="res://gauge.tscn" id="3_dosfj"]
[ext_resource type="PackedScene" uid="uid://br6moafqr8ykn" path="res://debug_panel.tscn" id="3_p4ciw"]
[ext_resource type="PackedScene" uid="uid://cslby72tp46ig" path="res://debug_switch.tscn" id="4_xvhus"]
[ext_resource type="PackedScene" uid="uid://dy8wkx8wr4gjf" path="res://debug_button.tscn" id="6_al2d2"]
[ext_resource type="PackedScene" uid="uid://ddag4vhhuox0t" path="res://debug_knob.tscn" id="7_0xh05"]

[node name="Demo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_76ghk")

[node name="DeveloperConsole" parent="." instance=ExtResource("2_fdv2n")]

[node name="EngineRPM" parent="." instance=ExtResource("3_dosfj")]
position = Vector2(0, 453)
start_angle = 140.0
label = "Engine RPM"

[node name="EngineCurrent" parent="." instance=ExtResource("3_dosfj")]
position = Vector2(200, 453)
start_angle = 140.0
label = "Engine Current"

[node name="OilPressure" parent="." instance=ExtResource("3_dosfj")]
position = Vector2(400, 453)
start_angle = 140.0
label = "Oil Pressure"

[node name="BrakeCylinderPressure" parent="." instance=ExtResource("3_dosfj")]
position = Vector2(600, 453)
start_angle = 140.0
label = "BrakeCyl Pressure"

[node name="BrakePipePressure" parent="." instance=ExtResource("3_dosfj")]
position = Vector2(800, 453)
start_angle = 130.0
label = "Main pipe"

[node name="UI" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Header" type="HBoxContainer" parent="UI"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TrainName" type="Label" parent="UI/Header"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="BatteryLabel" type="Label" parent="UI/Header"]
layout_mode = 2
size_flags_horizontal = 0
text = "Battery"

[node name="BatteryProgressBar" type="ProgressBar" parent="UI/Header"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
tooltip_text = "Battery"
max_value = 110.0
show_percentage = false

[node name="BatteryValue" type="Label" parent="UI/Header"]
unique_name_in_owner = true
layout_mode = 2

[node name="Title" type="Label" parent="UI/Header"]
layout_mode = 2
size_flags_horizontal = 10
text = "MaSzyna MOVER TESTER"
horizontal_alignment = 2

[node name="DebugPanels" type="HFlowContainer" parent="UI"]
layout_mode = 2
size_flags_vertical = 3

[node name="DebugEngine" parent="UI/DebugPanels" instance=ExtResource("3_p4ciw")]
unique_name_in_owner = true
layout_mode = 2
title = "Engine"

[node name="DebugSecurity" parent="UI/DebugPanels" instance=ExtResource("3_p4ciw")]
unique_name_in_owner = true
layout_mode = 2
title = "Security"

[node name="DebugBrake" parent="UI/DebugPanels" instance=ExtResource("3_p4ciw")]
unique_name_in_owner = true
layout_mode = 2
title = "Brake"

[node name="DebugTrain" parent="UI/DebugPanels" instance=ExtResource("3_p4ciw")]
unique_name_in_owner = true
layout_mode = 2
title = "Train"

[node name="MoverSwitches" type="HBoxContainer" parent="UI"]
layout_mode = 2

[node name="General" type="HFlowContainer" parent="UI/MoverSwitches"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MoverSwitches/General"]
layout_mode = 2
text = "General"

[node name="Battery" parent="UI/MoverSwitches/General" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "Battery"
controller = NodePath("../../../../SM42")
state_property = "battery_enabled"
command = "battery"

[node name="MainIncrease" type="Button" parent="UI/MoverSwitches/General"]
layout_mode = 2
text = "Main +"

[node name="MainDecrease" type="Button" parent="UI/MoverSwitches/General"]
layout_mode = 2
text = "Main -"

[node name="Forward" type="Button" parent="UI/MoverSwitches/General"]
layout_mode = 2
text = "Forward"

[node name="Reverse" type="Button" parent="UI/MoverSwitches/General"]
layout_mode = 2
text = "Reverse"

[node name="Security" type="HFlowContainer" parent="UI/MoverSwitches"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MoverSwitches/Security"]
layout_mode = 2
text = "Security"

[node name="CA_SHP_Reset" parent="UI/MoverSwitches/Security" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "CA/SHP"
type = 1
controller = NodePath("../../../../SM42")
command = "security_acknowledge"

[node name="Diesel" type="HFlowContainer" parent="UI/MoverSwitches"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MoverSwitches/Diesel"]
layout_mode = 2
text = "Diesel"

[node name="OilPump" parent="UI/MoverSwitches/Diesel" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "Oil Pump"
type = 1
controller = NodePath("../../../../SM42")
state_property = "oil_pump_active"
command = "oil_pump"

[node name="FuelPump" parent="UI/MoverSwitches/Diesel" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "Fuel Pump"
type = 1
controller = NodePath("../../../../SM42")
state_property = "fuel_pump_active"
command = "fuel_pump"

[node name="Main" parent="UI/MoverSwitches/Diesel" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "Main"
type = 0
controller = NodePath("../../../../SM42")
state_property = "main_switch_enabled"
command = "main_switch"

[node name="Electric" type="HFlowContainer" parent="UI/MoverSwitches"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MoverSwitches/Electric"]
layout_mode = 2
text = "Electric"

[node name="Converter" parent="UI/MoverSwitches/Electric" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "Converter"

[node name="Compressor" parent="UI/MoverSwitches/Electric" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "Compressor"

[node name="Main" parent="UI/MoverSwitches/Electric" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "Main"
type = 0

[node name="Brakes" type="HFlowContainer" parent="UI/MoverSwitches"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MoverSwitches/Brakes"]
layout_mode = 2
size_flags_horizontal = 3
text = "Brakes"

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MoverSwitches/Brakes"]
layout_mode = 2

[node name="Drive" parent="UI/MoverSwitches/Brakes/VBoxContainer" instance=ExtResource("6_al2d2")]
layout_mode = 2
disabled = false
text = "Drive"
controller = NodePath("../../../../../SM42")
command = "brake_level_set_position"
command_argument = "drive"

[node name="Full" parent="UI/MoverSwitches/Brakes/VBoxContainer" instance=ExtResource("6_al2d2")]
layout_mode = 2
disabled = false
text = "Full"
controller = NodePath("../../../../../SM42")
command = "brake_level_set_position"
command_argument = "full"

[node name="Emergency" parent="UI/MoverSwitches/Brakes/VBoxContainer" instance=ExtResource("6_al2d2")]
layout_mode = 2
disabled = false
text = "Emergency"
controller = NodePath("../../../../../SM42")
command = "brake_level_set_position"
command_argument = "emergency"

[node name="Level" parent="UI/MoverSwitches/Brakes/VBoxContainer" instance=ExtResource("7_0xh05")]
layout_mode = 2
label = "Level"
step = 0.05
controller = NodePath("../../../../../SM42")
state_property = "brake_controller_position_normalized"
command = "brake_level_set"

[node name="BrakeLevel" type="SpinBox" parent="UI/MoverSwitches/Brakes/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="Releaser" parent="UI/MoverSwitches/Brakes/VBoxContainer" instance=ExtResource("4_xvhus")]
layout_mode = 2
label = "Releaser"
type = 1
controller = NodePath("../../../../../SM42")
command = "brake_releaser"

[node name="SM42" parent="." instance=ExtResource("2_t8uqe")]
train_id = "sm42"

[node name="TestowySilnikElektryczny" parent="SM42" index="1"]
enabled = false

[connection signal="button_up" from="UI/MoverSwitches/General/MainIncrease" to="." method="_on_main_increase_button_up"]
[connection signal="button_up" from="UI/MoverSwitches/General/MainDecrease" to="." method="_on_main_decrease_button_up"]
[connection signal="button_up" from="UI/MoverSwitches/General/Forward" to="." method="_on_forward_button_up"]
[connection signal="button_up" from="UI/MoverSwitches/General/Reverse" to="." method="_on_reverse_button_up"]
[connection signal="value_changed" from="UI/MoverSwitches/Brakes/VBoxContainer/BrakeLevel" to="." method="_on_brake_level_value_changed"]
[connection signal="mover_initialized" from="SM42" to="." method="_on_sm_42_mover_initialized"]

[editable path="SM42"]
